# mathnote-ocr

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
classifier/: augment.py  evaluate.py  import_data.py  inference.py  model.py  stroke_augment.py  train.py
configs/: default.yaml  mixed_v10_backtrack_gnn.yaml  mixed_v3.yaml  mixed_v8.yaml  mixed_v8_neighborhood.yaml  mixed_v9.yaml  mixed_v9_backtrack.yaml  mixed_v9_backtrack_collapse.yaml  mixed_v9_backtrack_gnn.yaml  mixed_v9_bottomup.yaml  mixed_v9_gnn.yaml  reference.yaml
data/runs/: README.md
data/shared/: README.md
data_gen/: __init__.py  redundant_bad_patterns.txt
data_gen/latex_sampling/: symbols.py  v12.py  v13.py  v15.py  v2.py  v4.py  v5.py  v6.py  v8.py  v9.py
data_gen/latex_sampling_v2/: generator.py  templates.py
data_gen/latex_sampling_v3/: generator.py
demos/: README.md
demos/web/: server.py
engine/: checkpoint.py  grouper.py  grouper_v2.py  layout.py  renderer.py  stroke.py
grouper_gnn/: features.py  inference.py  train.py
latex_utils/: relations.py  sampling.py
scripts/: eval_backtrack.py  verify_data.py
scripts/data/: render_collapsed.py
scripts/diagnostics/: analyze_subset_errors.py  collect_failures.py  collect_subset_failures.py  compare_aug_hw.py  diagnose_propagation.py  diagnose_sqrt.py  eval_sup_frac.py  render_augmented.py  test_collapse.py  (+4 more)
tools/: collect.html  collect_expr.html  collect_expr_server.py  collect_server.py  detect.html  detect_server.py  parse.html  parse_server.py  test.html  test_server.py  test_tree.py  tree_browse.html  tree_browse_server.py
tree_parser/: bottomup_v2.py  consensus.py  costs.py  evidence.py  gen_data.py  hw_bbox_augment.py  inference.py  problematic_expressions.txt  score_tree.py  subset_dataset.py  subset_model.py  subset_selection.py  subset_train.py  tree.py  tree_builder.py  tree_latex.py  tree_ops.py  tree_v2.py
(+6869 files in other folders)
